--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 
 <body>
 	<body ng-app="mah-app" ng-controller="mah-controller">
+    <div class="top-cover"><span class="">Recipe Picker</span></div>
+    
+
+</div>
     <div class="container">
 		<!-- <h1>Recipe App</h1> -->
   <!-- <h3>Search Ingrdients:</h3>
   <input type="text" ng-model="contactSearch" placeholder="Search Ingredients"> -->
-<div class="blur"></div>
+
   <h5>Pick Ingredients</h5>
   <form action="#">
     <p>
